--- a/data/2025-12-21/_manifest.json
+++ b/data/2025-12-21/_manifest.json
@@ -1,7 +1,6 @@
 {
   "run_date": "2025-12-21",
   "files": [
-    "bestsellers_appliances.json",
-    "notebook.json"
+    "bestsellers_appliances.json"
   ]
 }
